tests: integrate suricatta tests into kbuild
Suricatta's tests have lived "off-tree", resulting in some ongoing
maintenance efforts to keep method signatures for mocks and the like in
sync. Additionally, kconfig options had to be set specifically for the
tests in the tests' Makefile, resulting in a potential divergence of the
tests' kconfig options and a swupdate's kconfig options.

By integrating suricatta's tests into the kbuild infrastructure, both
these problems are addressed and solved.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/suricatta/test/Makefile
+++ b/suricatta/test/Makefile
@@ -1,6 +1,5 @@
-##
 ## Author: Christian Storm
-## Copyright (C) 2016, Siemens AG
+## Copyright (C) 2017, Siemens AG
 ##
 ## This program is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
@@ -16,66 +15,51 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc.
 
-SURICATTA_TEST_DIR = $(abspath $(dir $(CURDIR)/$(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST))))
-SURICATTA_DIR      = $(abspath $(SURICATTA_TEST_DIR)/../)
-SWUPDATE_DIR       = $(abspath $(SURICATTA_TEST_DIR)/../../)
+tests-$(CONFIG_SURICATTA_HAWKBIT) += test_json
+tests-$(CONFIG_SURICATTA_HAWKBIT) += test_server_hawkbit
 
-SURICATTA_INCLUDES = -I. -isystem $(SWUPDATE_DIR)/include -I$(SURICATTA_DIR)
-SURICATTA_CFLAGS   = -Wall -Wextra -pedantic -fno-common -std=c99
-SURICATTA_LDFLAGS  =
-## transfer __mock_*() functions to according linker flags via rudimentary regex awk parsing
-SURICATTA_LDMOCKS  = `/usr/bin/awk '/^[^(extern)|(static)]*([\*_[:alnum:]]+[[:blank:]]+)+[\*]*__wrap_/{where = match($$0,"__wrap_[_[:alnum:]]+"); if (RSTART > 0) { print "-Wl,--wrap=" substr($$0, RSTART+7, RLENGTH-7);}}' $(SURICATTA_TEST_DIR)/$@.c`
-SURICATTA_LIBS     = -lcmocka -lcurl -ljson-c -lpthread -lcrypto -lssl -lz
-SURICATTA_DEFINES  =  -DCONFIG_DEBUG -DCONFIG_SURICATTA_SSL -DUNIT_TESTING
-SURICATTA_DEFINES  += -D_GNU_SOURCE -DHAVE_SIGNAL_H
+ccflags-y += -I$(src)/../
 
-ifeq ($(CC),clang)
-	SURICATTA_CFLAGS += -Weverything -Wno-gnu-zero-variadic-macro-arguments -Wno-disabled-macro-expansion -Wno-switch-enum -Wno-bad-function-cast
+TARGETS    = $(addprefix $(obj)/, $(tests-y))
+tests-objs = $(addsuffix .o,   $(TARGETS))
+tests-lnk  = $(addsuffix .lnk, $(TARGETS))
+targets   += $(addsuffix .o,   $(tests-y))
+
+ifneq ($(CONFIG_EXTRA_LDFLAGS),)
+EXTRA_LDFLAGS += $(strip $(subst ",,$(CONFIG_EXTRA_LDFLAGS)))#"))
 endif
 
-TEST_SRCS = $(wildcard test_*.c)
-TEST_OBJS = $(addsuffix .o, $(basename $(TEST_SRCS)))
-TARGETS   = $(basename $(TEST_SRCS))
+## transfer __mock_*() functions to according linker flags via rudimentary regex awk parsing
+LDMOCKS = `/usr/bin/awk '/^[^(extern)|(static)]*([\*_[:alnum:]]+[[:blank:]]+)+[\*]*__wrap_/{where = match($$0,"__wrap_[_[:alnum:]]+"); if (RSTART > 0) { print "-Wl,--wrap=" substr($$0, RSTART+7, RLENGTH-7);}}' $(basename $@).c`
 
-SURICATTA_OBJS = $(SURICATTA_DIR)/server_hawkbit.o \
-				 $(SURICATTA_DIR)/channel_hawkbit.o \
-				 $(SURICATTA_DIR)/state.o \
-				 $(SURICATTA_DIR)/suricatta.o
+quiet_cmd_linktestexe = LD      $(basename $@)
+      cmd_linktestexe = $(srctree)/scripts/trylink \
+						"$(basename $@)" \
+						"$(CC)" \
+						"$(KBUILD_CFLAGS)" \
+						"$(LDFLAGS) $(EXTRA_LDFLAGS) $(LDMOCKS)" \
+						"$(basename $@).o $(subst core/built-in.o,core/built-in.o.tmp,$(SWOBJS))" \
+						"$(SWLIBS)" \
+						"$(LDLIBS) cmocka"
 
-SURICATTA_SRCS = $(addsuffix .c, $(basename $(SURICATTA_OBJS)))
+EXECUTE_TEST = echo "RUN $(subst $(obj)/,,$(var))"; CMOCKA_MESSAGE_OUTPUT=TAP $(var)
 
-SWUPDATE_OBJS  = $(SWUPDATE_DIR)/ipc/network_ipc.o \
-				 $(SWUPDATE_DIR)/corelib/swupdate_dict.o \
-				 $(SWUPDATE_DIR)/corelib/progress_thread.o
+PHONY += default
+default:
+	$(info please run 'make suricatta-tests' in swupdate main directory)
 
-COMPILE.c = $(CC) $(CFLAGS) $(SURICATTA_CFLAGS)  $(SURICATTA_DEFINES) $(SURICATTA_INCLUDES) -c
-LINK.c    = $(CC) $(CFLAGS) $(SURICATTA_LDFLAGS) $(SURICATTA_LIBS)    $(SURICATTA_LDMOCKS)
-
-EXECUTE_TEST = $(MAKE) --no-print-directory $(var)
-
-all: run
-
-## explicitly enumerate targets for zsh's completion, else
-## simply use $(TARGETS): % : clean %.c $(SURICATTA_OBJS) $(SURICATTA_SRCS)
-test_server_hawkbit test_json: % : clean %.c $(SURICATTA_OBJS) $(SURICATTA_SRCS)
-	@$(info ## Compiling and Executing Test: $@)
-	@$(COMPILE.c) $@.c -o $@.o
-	## NOTE: assuming libubootenv.a is available in $(SWUPDATE_DIR)/ for linking
-	## NOTE: assuming network_ipc.o is available in $(SWUPDATE_DIR)/ipc/ for linking
-	## NOTE: assuming swupdate_dict.o is available in $(SWUPDATE_DIR)/corelib/ for linking
-	## NOTE: assuming progress_thread.o is available in $(SWUPDATE_DIR)/corelib/ for linking
-	@$(LINK.c) $(SWUPDATE_OBJS) $(SURICATTA_OBJS) $@.o -L$(SWUPDATE_DIR) -lubootenv -o $@
-	@CMOCKA_MESSAGE_OUTPUT=TAP $(SURICATTA_TEST_DIR)/$@
-
-run:
+PHONY += tests
+ifneq "$(tests-y)" ""
+tests: $(tests-objs) $(tests-lnk)
 	@+$(foreach var,$(TARGETS),$(EXECUTE_TEST);)
+else
+tests:
+	@$(info suricatta is disabled, nothing to test.)
+	@:
+endif
 
-%.o: %.c
-	@$(COMPILE.c) $< -o $@
+$(obj)/%.lnk: $(objtree)/core/built-in.o
+	$(Q)strip -N main -o $(objtree)/core/built-in.o.tmp $(objtree)/core/built-in.o
+	$(Q)$(call cmd,linktestexe)
 
-clean:
-	@$(RM) $(TEST_OBJS) $(TARGETS) $(SURICATTA_OBJS)
-
-.PHONY: clean all run $(TARGETS)
-.SUFFIXES:
-.NOTPARALLEL:
+.PHONY: $(PHONY)
