json parser: include software node in parsing
Unlike libconfig, parsing json description files does not support
the software node. Taking the json description file example as
a specification, add support to parse the software node.

Signed-off-by: Renaud Barbier <renaud.barbier@abaco.com>

--- a/parser/Config.in
+++ b/parser/Config.in
@@ -11,9 +11,9 @@ config LIBCONFIG
 comment "Default config parser support needs libconfig"
 	depends on !HAVE_LIBCONFIG
 
-config LIBCONFIGROOT
+config PARSERROOT
 	string "Name of root node"
-	depends on LIBCONFIG
+	depends on LIBCONFIG || JSON
 	help
 	  For compatibility reasons, the root node
 	  can be set to something else as "software".
