Signed images: select verification mode
Add verification via certificates. The mode is selcted at compile time
if SIGNED_IMAGE is active. The default remains via a RSA key, but
using a certificate (CMS) can be activated. The file passed with
the -k parameter must be then a certificate instead of RSA public key.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -280,6 +280,22 @@ config SIGNED_IMAGES
 comment "Image verification (signed images) needs libssl"
 	depends on !HAVE_LIBSSL
 
+choice
+	prompt "Signature verification algorithm"
+	depends on SIGNED_IMAGES
+	default SIGALG_RAWRSA
+	help
+	  Select if the signature algorithm for signed images is a raw RSA signature
+	  (following PKCS#1.5) or if it uses Cryptographic Message Syntax (CMS).
+
+	config SIGALG_RAWRSA
+			bool "RSA PKCS#1.5"
+
+	config SIGALG_CMS
+			bool "Cryptographic Message Syntax (CMS)"
+
+endchoice
+
 config ENCRYPTED_IMAGES
 	bool "Images can be encrypted with a symmetric key"
 	depends on HAVE_LIBSSL
