suricatta: automatically set JSON with hawkbit
It looks like strange to just inform the user that he should enable JSON
when he needs to enable Hawkbit support. Json is set in the parser menu
and it is not very logical to go on that menu.

Automatically select JSON if Hawkbit is selected.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/suricatta/Config.in
+++ b/suricatta/Config.in
@@ -62,7 +62,7 @@ choice
 config SURICATTA_HAWKBIT
 	bool "hawkBit support"
 	depends on HAVE_LIBCURL
-	depends on JSON
+	select JSON
 	select SURICATTA
 	help
 	  Support for hawkBit server.
@@ -74,10 +74,6 @@ config SURICATTA_SERVER_NONE
 	  Do not start suricatta mode
 
 endchoice
-
-
-comment "hawkBit support needs libcurl and CONFIG_JSON=y"
-	depends on !HAVE_LIBCURL || !JSON
 
 endmenu
 
