--- a/Makefile.flags
+++ b/Makefile.flags
@@ -40,12 +40,17 @@ endif
 # gcc 3.x emits bogus "old style proto" warning on find.c:alloc_action()
 KBUILD_CFLAGS += $(call cc-ifversion, -ge, 0400, -Wold-style-definition)
 
-KBUILD_CFLAGS += $(call cc-option,-fno-builtin-strlen -finline-limit=0 -fomit-frame-pointer -ffunction-sections -fdata-sections,)
+ifneq ($(CC),clang)
+KBUILD_CFLAGS += $(call cc-option, -finline-limit=0,)
+endif
+KBUILD_CFLAGS += $(call cc-option,-fno-builtin-strlen -fomit-frame-pointer -ffunction-sections -fdata-sections,)
 # -fno-guess-branch-probability: prohibit pseudo-random guessing
 # of branch probabilities (hopefully makes bloatcheck more stable):
 KBUILD_CFLAGS += $(call cc-option,-fno-guess-branch-probability,)
-KBUILD_CFLAGS += $(call cc-option,-funsigned-char -static-libgcc,)
-KBUILD_CFLAGS += $(call cc-option,-falign-functions=1 -falign-jumps=1 -falign-labels=1 -falign-loops=1,)
+KBUILD_CFLAGS += $(call cc-option,-funsigned-char,)
+ifneq ($(CC),clang)
+KBUILD_CFLAGS += $(call cc-option,-falign-functions=1 -falign-jumps=1 -falign-labels=1 -falign-loops=1 -static-libgcc,)
+endif
 # Defeat .eh_frame bloat (gcc 4.6.3 x86-32 defconfig: 20% smaller binary):
 KBUILD_CFLAGS += $(call cc-option,-fno-unwind-tables,)
 KBUILD_CFLAGS += $(call cc-option,-fno-asynchronous-unwind-tables,)
