Introduce generic bootloader support
Currently, just U-Boot is supported. Other bootloader that has an
environment with variables can be also be supported. To make it generic,
introduce generic functions that wrap current u-boot's functions in the
libubootenv library.

A new bootloader can be added if the following API is exposed:

	bootloader_env_set (name, value) : set a variable
	bootloader_env_get (name) : retrieve value of a variable
	bootloader_env_unset (name) : drop a variable from the environment
	bootloader_apply_list (script) : set env from file

Signed-off-by: Stefano Babic <sbabic@denx.de>
Signed-off-by: Maciej Pijanowski <maciej.pijanowski@3mdeb.com>

--- a/Kconfig
+++ b/Kconfig
@@ -241,6 +241,13 @@ endmenu
 
 endmenu
 
+config BOOTLOADER
+	bool
+	default n
+
+source bootloader/Config.in
+
+
 config DOWNLOAD
 	bool "Enable image downloading"
 	default n
