--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -127,25 +127,11 @@ comment "remote handler needs zeromq"
 	depends on !HAVE_LIBZEROMQ
 
 
-config UBOOT
-	bool "uboot"
-	depends on HAVE_LIBUBOOTENV
-	depends on HAVE_ZLIB
+config BOOTLOADERHANDLER
+	bool "bootloader"
 	default n
 	help
-	  Enable it to change U-Boot environment
+	  Enable it to change bootloader environment
 	  during the installation process.
-
-comment "uboot support needs libubootenv, libz"
-	depends on !HAVE_ZLIB
-
-config UBOOT_FWENV
-	string "U-Boot Environment Configuration file"
-	depends on UBOOT
-	default "/etc/fw_env.config"
-	help
-	  This is the file described in U-Boot documentation
-	  in the tools directory. It tells where the U-Boot
-	  environment is saved.
 
 endmenu
