--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -11,4 +11,4 @@ obj-$(CONFIG_LUASCRIPTHANDLER) += lua_scripthandler.o
 obj-$(CONFIG_SHELLSCRIPTHANDLER) += shell_scripthandler.o
 obj-$(CONFIG_RAW) += raw_handler.o
 obj-$(CONFIG_REMOTE_HANDLER) += remote_handler.o
-obj-$(CONFIG_UBOOT) += uboot_handler.o
+obj-$(CONFIG_BOOTLOADERHANDLER) += boot_handler.o
