--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -1,2 +1,3 @@
 lib-$(CONFIG_UBOOT)		+= bootloader_uboot.o
 lib-$(CONFIG_BOOTLOADER_NONE)	+= bootloader_none.o
+lib-$(CONFIG_BOOTLOADER_GRUB)	+= grubenv.o
