suricata_hwakbit: depends on HAVE_JSON_C
Unconditionally selecting JSON when !HAVE_JSON_C leads to a warning:

warning: (SURICATTA_HAWKBIT) selects JSON which has unmet direct dependencies (HAVE_JSON_C)

and eventually a build failure:

In file included from corelib/artifacts_versions.c:34:0:
include/parselib.h:61:25: fatal error: json-c/json.h: No such file or directory

Make SURICATTA_HAWKBIT depend on HAVE_JSON_C.

Signed-off-by: Baruch Siach <baruch@tkos.co.il>

--- a/suricatta/Config.in
+++ b/suricatta/Config.in
@@ -54,6 +54,7 @@ choice
 config SURICATTA_HAWKBIT
 	bool "hawkBit support"
 	depends on HAVE_LIBCURL
+	depends on HAVE_JSON_C
 	select JSON
 	select SURICATTA
 	help
