examples: fix make clean in hawkbit's examles
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/sendtohawkbit/Makefile
+++ b/examples/sendtohawkbit/Makefile
@@ -5,4 +5,4 @@ all: sendtohawkbit hawkbitcfg
 	$(CC) -g -o $@ $< -I../../include ../../ipc/lib.a -lpthread
 
 clean:
-	@rm -f sendtohawkbit
+	@rm -f sendtohawkbit hawkbitcfg
