bootloader: consolidate bootloader places
As there are now 2 bootloaders supported, consolidate the
places for headers and implementation to make adding support
for more bootloaders not clutter the include directory.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -1,3 +1,3 @@
-lib-$(CONFIG_UBOOT)		+= bootloader_uboot.o
-lib-$(CONFIG_BOOTLOADER_NONE)	+= bootloader_none.o
-lib-$(CONFIG_BOOTLOADER_GRUB)	+= grubenv.o
+lib-$(CONFIG_UBOOT)		+= uboot.o
+lib-$(CONFIG_BOOTLOADER_NONE)	+= none.o
+lib-$(CONFIG_BOOTLOADER_GRUB)	+= grub.o
