configs: drop U-BOOT due to miising libubootenv
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/configs/without_lua_defconfig
+++ b/configs/without_lua_defconfig
@@ -1,6 +1,7 @@
 CONFIG_HW_COMPATIBILITY=y
 # CONFIG_LUA is not set
 CONFIG_EXTRA_CFLAGS="-g"
+CONFIG_BOOTLOADER_NONE=y
 CONFIG_DOWNLOAD=y
 CONFIG_SIGNED_IMAGES=y
 CONFIG_ENCRYPTED_IMAGES=y
