handlers: separate handler for Hamming1
The "hamming1" handler is only used on some TI's SOCs. Split the code
and move it from general flash handler to let code cleaner.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -5,6 +5,7 @@
 # on the received image type.
 obj-$(CONFIG_ARCHIVE) += archive_handler.o
 obj-$(CONFIG_CFI)	+= flash_handler.o
+obj-$(CONFIG_CFIHAMMING1)+= flash_hamming1_handler.o
 obj-$(CONFIG_RAW)	+= raw_handler.o
 obj-$(CONFIG_UBIVOL)	+= ubivol_handler.o
 obj-$(CONFIG_LUASCRIPTHANDLER) += lua_scripthandler.o
