Add a file-backed bootloader interface for test purposes
When your bootloader is not supported by swupdate, it may be convenient
to have a persistent settings store put on a separate partition (not
affected by firmware updates). This is really meant to be an intermediate
solution as the hosting partition may get corrupted if the device isn't
cleanly shut down.

Signed-off-by: Cedric Hombourger <Cedric_Hombourger@mentor.com>

--- a/bootloader/Config.in
+++ b/bootloader/Config.in
@@ -19,6 +19,25 @@ config BOOTLOADER_NONE
 	help
 	  No interface to the bootloader
 
+config BOOTLOADER_FILE
+	bool "File"
+	depends on HAVE_LIBCONFIG
+	help
+	  A file-backed boot settings interface that may be used
+	  for testing purposes when your actual boot-loader is not
+	  supported by swupdate
+
+config BOOTLOADER_FILE_PATH
+	string "Location of the boot settings file"
+        depends on BOOTLOADER_FILE
+	default "/etc/swu-boot.conf"
+	help
+	  This is the file where boot settings will be read from
+	  or written to (it should be placed on a separate partition
+	  so it does not get lost when software updates are applied;
+	  as such the default value of /etc/swu-boot.conf should be
+	  changed)
+
 config BOOTLOADER_GRUB
 	bool "GRUB Bootloader"
 	help
