examples: optionally build all source files in tools/
Enable -- by uncommenting lines in tools/Makefile -- the
integration of compiling/linking any .c files placed
alongside the "official" tools in the tools/ directory into
SWUpdate's build system.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -13,3 +13,11 @@ lib-y += \
 	 progress.o \
 	 hawkbitcfg.o \
 	 sendtohawkbit.o
+
+# # Uncomment the next lines to integrate the compiling/linking of
+# # any .c files placed alongside the above "official" tools in the
+# # tools/ directory into SWUpdate's build system.
+# TOOLS_DIR := $(dir $(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST)))
+# TOOLS_SRC := $(wildcard $(TOOLS_DIR)/*.c)
+# TOOLS_BIN := $(patsubst $(TOOLS_DIR)/%.c, %.o, $(TOOLS_SRC))
+# lib-y += $(filter-out $(lib-y),$(TOOLS_BIN))
