mongoose: select MONGOOSE when WEBSERSER is selected
As mongoose is currently the only webserver implementation and
SWUpdate doesn't link if WEBSERSER && !MONGOOSE is selected,
select MONGOOSE when WEBSERVER is selected.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/Kconfig
+++ b/Kconfig
@@ -317,6 +317,7 @@ source suricatta/Config.in
 config WEBSERVER
 	bool "Enable webserver"
 	default n
+	select MONGOOSE
 	help
 	  Enable update from remote using a webserver on the target.
 
