Kconfig: make Suricatta config option available with menuconfig
The Suricatta config option is only available through setting it in the
config file, but not when using menuconfig and friends.

Make the Suricatta config option available with menuconfig and friends.

Signed-off-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/suricatta/Config.in
+++ b/suricatta/Config.in
@@ -1,7 +1,23 @@
-menu "Suricatta"
+menuconfig SURICATTA
+	bool "Suricatta"
+	help
+	  Suricatta is a daemon mode of SWUpdate.
+
+	  Suricatta regularly polls a remote server for updates,
+	  downloads, and installs them. Thereafter, it reboots the
+	  system and reports the update status to the server, based
+	  on an update state variable currently stored in bootloader’s
+	  environment ensuring persistent storage across reboots. Some
+	  U-Boot script logics or U-Boot’s bootcount feature may be
+	  utilized to alter this update state variable, e.g., by
+	  setting it to reflect failure in case booting the newly
+	  flashed root file system has failed and a switchback had to
+	  be performed.
+
+if SURICATTA
 
 menu "Features"
-depends on SURICATTA
+
 config SURICATTA_SSL
 	bool "SSL support"
 	default n
@@ -56,7 +72,6 @@ config SURICATTA_HAWKBIT
 	depends on HAVE_LIBCURL
 	depends on HAVE_JSON_C
 	select JSON
-	select SURICATTA
 	help
 	  Support for hawkBit server.
 	  https://projects.eclipse.org/projects/iot.hawkbit
@@ -70,4 +85,4 @@ endchoice
 
 endmenu
 
-endmenu
+endif
