Lua: introduce LuaJIT/Lua 5.1 compatibility
Introduce LuaJIT/Lua 5.1 compatibility by integrating
backports of currently used 5.2+ functionality from
https://github.com/keplerproject/lua-compat-5.2

Future functionality backports should be implemented
in corelib/lua_compat.c as well, serving as a central
place for this purpose.

Signed-off-by: Christian Storm <christian.storm@siemens.com>
Reviewed-by: Stefano Babic <sbabic@denx.de>
Tested-by: Jörg Krause <joerg.krause@embedded.rocks>

--- a/corelib/Makefile
+++ b/corelib/Makefile
@@ -7,7 +7,7 @@ lib-y				+= installer.o \
 				   swupdate_dict.o
 lib-$(CONFIG_DOWNLOAD)		+= downloader.o
 lib-$(CONFIG_MTD)		+= mtd-interface.o
-lib-$(CONFIG_LUA)		+= lua_interface.o
+lib-$(CONFIG_LUA)		+= lua_interface.o lua_compat.o
 lib-$(CONFIG_HASH_VERIFY)	+= verify_signature.o
 lib-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt.o
 lib-$(CONFIG_LIBCONFIG)		+= swupdate_settings.o \
